date validation added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             <label class="labels">Name:</label><br>
             <input type="text" id="name" placeholder="Enter Name"/> <br>
             <label>Date of birth</label><br>
-            <input type="text" id="dob" placeholder="DD/MM/YYYY"/> <br>
+            <input type="text" id="dob" placeholder="DD/MM/YYYY"> <br>
+            <span id='error'>*Please enter valid Date</span>
             <label>Place:</label><br>
             <input type="text" id="city" placeholder="Enter your city"/> <br>
             <label>Interested:</label><br>
